WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111444
[BlackBerry] FatFinger pairs the wrong element with fatfinger rect part
https://bugs.webkit.org/show_bug.cgi?id=111444
Summary
[BlackBerry] FatFinger pairs the wrong element with fatfinger rect part
Tiancheng Jiang
Reported
2013-03-05 08:53:11 PST
When we do the fatfinger and try to findIntersectingRegions, we use fatfinger rect subtract element area, which end up we pair the wrong fatfinger rect part, which is outside the chosen element area, with the chosen element. This result adjustedposition is outside of the chosen element.
Attachments
Patch
(2.38 KB, patch)
2013-03-05 08:58 PST
,
Tiancheng Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tiancheng Jiang
Comment 1
2013-03-05 08:58:40 PST
Created
attachment 191505
[details]
Patch
Rob Buis
Comment 2
2013-03-05 09:13:58 PST
Comment on
attachment 191505
[details]
Patch Ok.
Antonio Gomes
Comment 3
2013-03-05 09:53:09 PST
Comment on
attachment 191505
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=191505&action=review
> Source/WebKit/blackberry/WebKitSupport/FatFingers.cpp:382 > - remainingFingerRegion = subtractRegions(remainingFingerRegion, layerRegion); > + remainingFingerRegion = intersectRegions(remainingFingerRegion, layerRegion);
that is not right. what does it fix?
WebKit Review Bot
Comment 4
2013-03-05 09:56:33 PST
Comment on
attachment 191505
[details]
Patch Clearing flags on attachment: 191505 Committed
r144771
: <
http://trac.webkit.org/changeset/144771
>
WebKit Review Bot
Comment 5
2013-03-05 09:56:36 PST
All reviewed patches have been landed. Closing bug.
Tiancheng Jiang
Comment 6
2013-03-05 10:28:48 PST
If we use remainingFingerRegion subtract layerRegion, which will give us a region outside of layerRegion. But when we do checkFingerIntersection, we pair this region with the layer element. This end up a mismatch pair. We should pair the intersected part with the layerRegion element. (In reply to
comment #3
)
> (From update of
attachment 191505
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=191505&action=review
> > > Source/WebKit/blackberry/WebKitSupport/FatFingers.cpp:382 > > - remainingFingerRegion = subtractRegions(remainingFingerRegion, layerRegion); > > + remainingFingerRegion = intersectRegions(remainingFingerRegion, layerRegion); > > that is not right. what does it fix?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug