[BlackBerry] FatFinger pairs the wrong element with fatfinger rect part. https://bugs.webkit.org/show_bug.cgi?id=111444

Patch by Tiancheng Jiang <tijiang@rim.com> on 2013-03-05
Reviewed by Rob Buis.

Internal PR 266214
Internally reviewed by Genevieve Mak.

Instead of subtracting with the element region, we should get the remaining
rect by find the intersect region of element region and fatfinger detection
region.

* WebKitSupport/FatFingers.cpp:
(BlackBerry::WebKit::FatFingers::checkForClickableElement):

Canonical link: https://commits.webkit.org/129802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144771 268f45cc-cd09-0410-ab3c-d52691b4dbfc