Source/WebKit/blackberry/WebKitSupport/FatFingers.cpp
@@ -374,12 +374,12 @@ bool FatFingers::checkForClickableElement(Element* curElement,
         if (curElementRenderLayer != lowestPositionedEnclosingLayerSoFar) {
 
             // elementRegion will always be in contents coordinates of its container frame. It needs to be
-            // mapped to main frame contents coordinates in order to subtract the fingerRegion, then.
+            // mapped to main frame contents coordinates in order to intersect the fingerRegion, then.
             WebCore::IntPoint framePos(m_webPage->frameOffset(curElement->document()->frame()));
             IntRectRegion layerRegion(Platform::IntRect(lowestPositionedEnclosingLayerSoFar->renderer()->absoluteBoundingBoxRect(true/*use transforms*/)));
             layerRegion.move(framePos.x(), framePos.y());
 
-            remainingFingerRegion = subtractRegions(remainingFingerRegion, layerRegion);
+            remainingFingerRegion = intersectRegions(remainingFingerRegion, layerRegion);
 
             lowestPositionedEnclosingLayerSoFar = curElementRenderLayer;
         }
